@@ -2,6 +2,9 @@
 
 	* .version, doc/sdccman.lyx: bumped version to 3.1.5
 	* ChangeLog: removed unicode BOM
+	* support/sdbinutils/binutils/Makefile.am,
+	  support/sdbinutils/binutils/Makefile.in:
+	  fixed the first part of bug #3518739 - Build weird behaviour...
 
 2012-05-05 Maarten Brock <sourceforge.brock AT dse.nl>
 
